# pysequencer

./: .gitignore  main.py  pyproject.toml
src/pysequencer/: __init__.py  api.py  engine.py  state_machine.py
tests/: test_engine.py
